# cachetto

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
examples/: countries.py  simple.py
src/cachetto/: _config.py  _core.py  _files.py  _hashing.py  _utils.py  config.py  core.py
src/dfcache/: __init__.py  config.py  core.py
tests/unit/: test_config.py  test_core.py  test_files.py  test_hashing.py  test_utils.py
