[project]
name = "dfcache"
version = "0.1.0"
description = "Easy cacher of functions working with dataframes"
readme = "README.md"
authors = [
    { name = "agustin", email = "agustin.piqueres@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pandas[parquet]>=1.5.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.11",
]
